[gd_scene load_steps=2 format=3 uid="uid://l0obxdihfmpf"]

[ext_resource type="Script" path="res://scenes/properties/property_manager.gd" id="1_hd27y"]

[node name="PropertyManager" type="Node"]
script = ExtResource("1_hd27y")

[node name="PropertyRotation" type="Node3D" parent="."]

[node name="PropertyDisplay" type="Label3D" parent="PropertyRotation"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
text = "tmp"
